// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`atLeast '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 0,
}
`;

exports[`atLeast 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 1,
}
`;

exports[`atLeast 'aa' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`atLeast 'aaa' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "a",
  "a",
]
`;

exports[`atLeast 'abaa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 1,
}
`;
